--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,57 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+    <ion-menu
+        side="start"
+        menuId="m1"
+    >
+        <ion-header>
+            <ion-toolbar>
+                <ion-title>ATMs Helper</ion-title>
+            </ion-toolbar>
+        </ion-header>
+        <ion-content>
+            <ion-list>
+                <ion-menu-toggle>
+                    <ion-item
+                        button
+                        lines="none"
+                        routerLink="/atms/tabs/collections"
+                    >
+                        <ion-icon
+                            name="albums"
+                            slot="start"
+                        ></ion-icon>
+                        <ion-label>All Collections</ion-label>
+                    </ion-item>
+                </ion-menu-toggle>
+                <ion-menu-toggle>
+                    <ion-item
+                        button
+                        lines="none"
+                        routerLink="/atms/tabs/notes"
+                    >
+                        <ion-icon
+                            name="text"
+                            slot="start"
+                        ></ion-icon>
+                        <ion-label>Notes</ion-label>
+                    </ion-item>
+                </ion-menu-toggle>
+                <ion-menu-toggle>
+                    <ion-item
+                        lines="none"
+                        (click)="onLogout()"
+                        button
+                    >
+                        <ion-icon
+                            name="exit"
+                            slot="start"
+                        ></ion-icon>
+                        <ion-label>Logout</ion-label>
+                    </ion-item>
+                </ion-menu-toggle>
+
+            </ion-list>
+        </ion-content>
+    </ion-menu>
+    <ion-router-outlet main></ion-router-outlet>
 </ion-app>
