--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,15 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>ATMs Notes</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+    <div class="ion-padding">
+        The world is your oyster.
+        <p>
+            What we do now is the most important factor for tomorrow. Unless we change our emotional pattern of behavior, tomorrow will resemble yesterday in most details except the date. 
+      — Moshe Feldenkrais, The Potent Self
+        </p>
+    </div>
 </ion-content>
