--- a/src/app/atms/notes/edit-note/edit-note.page.html
+++ b/src/app/atms/notes/edit-note/edit-note.page.html
@@ -3,21 +3,173 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="/atms/tabs/notes"></ion-back-button>
         </ion-buttons>
-        <ion-title>Edit Note for {{ note.lessonId }}</ion-title>
+        <ion-title>Edit Note</ion-title>
+        <ion-buttons slot="primary">
+            <ion-button
+                (click)="onUpdateNote()"
+                [disabled]="form?.invalid"
+            >
+                <ion-icon
+                    name="checkmark"
+                    slot="icon-only"
+                ></ion-icon>
+            </ion-button>
+        </ion-buttons>
+
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-button
-        margin
-        color="primary"
-        [routerLink]="[
-  '/',
-  'atms',
-  'tabs',
-  'notes'
-  ]"
+    <div
+        *ngIf="isLoading"
+        class="ion-text-center"
     >
-        Back to Notes
-    </ion-button>
+        <ion-spinner>Loading...</ion-spinner>
+    </div>
+    <form
+        [formGroup]="form"
+        *ngIf="!isLoading"
+    >
+        <ion-grid>
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-input
+                            readonly
+                            formControlName="collectionId"
+                            color="primary"
+                        ></ion-input>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col
+                    class="ion-no-padding"
+                    size-sm="1"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-input
+                            value="001"
+                            readonly
+                            formControlName="lessonId"
+                            max="10"
+                            color="primary"
+                        ></ion-input>
+                    </ion-item>
+                </ion-col>
+                <ion-col
+                    size-sm="5"
+                    class="ion-no-padding"
+                    no-padding
+                >
+                    <ion-item>
+                        <ion-input
+                            readonly
+                            formControlName="lessonTitle"
+                            color="primary"
+                        ></ion-input>
+                    </ion-item>
+                </ion-col>
+
+            </ion-row>
+
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-label
+                            color="primary"
+                            position="floating"
+                        >
+                            Status
+                        </ion-label>
+                        <ion-select
+                            formControlName="status"
+                            interface="popover"
+                        >
+                            <ion-select-option value="New">New</ion-select-option>
+                            <ion-select-option value="Done">Done</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-label
+                            color="primary"
+                            position="floating"
+                        >
+                            Level
+                        </ion-label>
+                        <ion-select
+                            formControlName="level"
+                            interface="popover"
+                        >
+                            <ion-select-option value="1">Easy</ion-select-option>
+                            <ion-select-option value="2">Intermidiate</ion-select-option>
+                            <ion-select-option value="3">Advanced</ion-select-option>
+                            <ion-select-option value="4">Expert</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-label
+                            color="primary"
+                            position="floating"
+                        >
+                            Rating
+                        </ion-label>
+                        <ion-select
+                            formControlName="rating"
+                            interface="popover"
+                        >
+                            <ion-select-option value="1">Good</ion-select-option>
+                            <ion-select-option value="2">Excellent</ion-select-option>
+                            <ion-select-option value="3">Pussle</ion-select-option>
+                            <ion-select-option value="4">Impossible</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-label
+                            color="primary"
+                            position="floating"
+                        >
+                            Lesson Note
+                        </ion-label>
+                        <ion-textarea
+                            formControlName="note"
+                            rows="10"
+                            autocomplete
+                            autocorrect
+                        ></ion-textarea>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+
+        </ion-grid>
+    </form>
 </ion-content>
