--- a/src/app/atms/notes/new-note/new-note.page.html
+++ b/src/app/atms/notes/new-note/new-note.page.html
@@ -3,8 +3,165 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="/atms/tabs/notes"></ion-back-button>
         </ion-buttons>
-        <ion-title>New Note</ion-title>
+        <ion-title>New ATM Note</ion-title>
+        <ion-buttons slot="primary">
+            <ion-button
+                (click)="onCreateNote()"
+                [disabled]="form.invalid"
+            >
+                <ion-icon
+                    name="checkmark"
+                    slot="icon-only"
+                ></ion-icon>
+            </ion-button>
+        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+    <form [formGroup]="form">
+        <ion-grid>
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-input
+                            color="primary"
+                            readonly
+                            formControlName="collectionId"
+                        ></ion-input>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col
+                    no-padding
+                    size-sm="1"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-input
+                            color="primary"
+                            value="001"
+                            readonly
+                            formControlName="lessonId"
+                            max="10"
+                        ></ion-input>
+                    </ion-item>
+                </ion-col>
+                <ion-col
+                    size-sm="5"
+                    no-padding
+                >
+                    <ion-item>
+                        <ion-input
+                            color="primary"
+                            readonly
+                            formControlName="lessonTitle"
+                        ></ion-input>
+                    </ion-item>
+                </ion-col>
+
+            </ion-row>
+
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-label
+                            color="primary"
+                            position="floating"
+                        >
+                            Status
+                        </ion-label>
+                        <ion-select
+                            interface="popover"
+                            [ngModel]="'New'"
+                            formControlName="status"
+                        >
+                            <ion-select-option value="New">New</ion-select-option>
+                            <ion-select-option value="Done">Done</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-label
+                            color="primary"
+                            position="floating"
+                        >
+                            Level
+                        </ion-label>
+                        <ion-select
+                            interface="popover"
+                            [ngModel]="'New'"
+                            formControlName="level"
+                        >
+                            <ion-select-option value="1">Easy</ion-select-option>
+                            <ion-select-option value="2">Intermidiate</ion-select-option>
+                            <ion-select-option value="3">Advanced</ion-select-option>
+                            <ion-select-option value="2">Expert</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-label
+                            color="primary"
+                            position="floating"
+                        >
+                            Rating
+                        </ion-label>
+                        <ion-select
+                            interface="popover"
+                            [ngModel]="'New'"
+                            formControlName="rating"
+                        >
+                            <ion-select-option value="1">Good</ion-select-option>
+                            <ion-select-option value="2">Excellent</ion-select-option>
+                            <ion-select-option value="3">Pussle</ion-select-option>
+                            <ion-select-option value="4">Impossible</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-item>
+                        <ion-label
+                            color="primary"
+                            position="floating"
+                        >
+                            Note
+                        </ion-label>
+                        <ion-textarea
+                            formControlName="note"
+                            rows="10"
+                            autocomplete
+                            autocorrect
+                        ></ion-textarea>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+
+        </ion-grid>
+    </form>
+</ion-content>
