--- a/src/app/atms/notes/notes.page.html
+++ b/src/app/atms/notes/notes.page.html
@@ -1,9 +1,12 @@
 <ion-header>
     <ion-toolbar>
-        <ion-buttons slot="start">
+        <!-- <ion-buttons slot="start">
             <ion-back-button defaultHref="/atms/tabs/collections"></ion-back-button>
+        </ion-buttons> -->
+        <ion-buttons slot="start">
+            <ion-menu-button menu="m1"></ion-menu-button>
         </ion-buttons>
-        <ion-title>My Notes</ion-title>
+        <ion-title>My ATMs Notes</ion-title>
         <ion-buttons slot="primary">
             <ion-button routerLink="/atms/tabs/notes/new">
                 <ion-icon
@@ -15,21 +18,63 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
     <ion-grid>
         <ion-row>
             <ion-col
                 size="12"
                 size-sm="8"
                 offset-sm="2"
+                *ngIf="!isLoading && (!loadedNotes || loadedNotes.length <= 0)"
+                text-center
             >
-                <ion-list>
-                    <ion-item
-                        *ngFor="let note of notes"
-                        [routerLink]="['/','atms','tabs','notes','edit', note.lessonId]"
+                <div>
+                    <p>No Notes Yet!</p>
+                    <ion-button
+                        color="primary"
+                        [routerLink]="['/atms/tabs/notes/new']"
                     >
-                        <ion-label>{{note.lessonId}}: {{note.note}}</ion-label>
-                    </ion-item>
+                        Create a New Note
+                    </ion-button>
+
+                </div>
+            </ion-col>
+
+            <ion-col
+                size="12"
+                size-sm="8"
+                offset-sm="2"
+            >
+                <div
+                    *ngIf="isLoading"
+                    class="ion-text-center"
+                >
+                    <ion-spinner color="primary">Loading Your Notes</ion-spinner>
+                </div>
+                <ion-list *ngIf="!isLoading && (loadedNotes && loadedNotes.length > 0)">
+                    <ion-item-sliding
+                        side="end"
+                        *ngFor="let note of loadedNotes"
+                        #slidingItem
+                    >
+                        <ion-item [routerLink]="['/','atms','tabs','notes','edit', note.noteId]">
+                            <ion-label>
+                                {{note.collectionId}} | {{note.lessonId}} | {{note.lessonTitle}}
+                            </ion-label>
+                        </ion-item>
+                        <ion-item-options>
+                            <ion-item-option
+                                color="danger"
+                                (click)="onDelete(note.noteId, slidingItem)"
+                            >
+                                <ion-icon
+                                    name="trash"
+                                    slot="top"
+                                ></ion-icon>
+                                Delete
+                            </ion-item-option>
+                        </ion-item-options>
+                    </ion-item-sliding>
                 </ion-list>
             </ion-col>
         </ion-row>
