--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,15 +1,90 @@
-<ion-header>
+<ion-header class="ion-text-center">
     <ion-toolbar>
-        <ion-title>Authenticate</ion-title>
+        <ion-title>{{ isLogin ? 'Login' : 'Signup'}}</ion-title>
     </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-    <ion-button
-        color="primary"
-        (click)="onLogin()"
+<ion-content class="ion-padding">
+    <form
+        #f="ngForm"
+        (ngSubmit)="onSubmit(f)"
     >
-        Login
-    </ion-button>
+        <ion-grid>
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+                    <ion-list>
+                        <ion-item>
+                            <ion-label position="floating">Email</ion-label>
+                            <ion-input
+                                type="email"
+                                ngModel
+                                name="email"
+                                required
+                                email
+                                #emailCtrl="ngModel"
+                            ></ion-input>
+                        </ion-item>
+                        <ion-item lines="none">
+                            <ion-label *ngIf="!emailCtrl.valid && emailCtrl.touched">Should be a valid Email!</ion-label>
+                        </ion-item>
+                        <ion-item>
+                            <ion-label position="floating">Password</ion-label>
+                            <ion-input
+                                type="password"
+                                ngModel
+                                name="password"
+                                required
+                                minlength="6"
+                                #passwordCtrl="ngModel"
+                            ></ion-input>
+                        </ion-item>
+                        <ion-item lines="none">
+                            <ion-label *ngIf="!passwordCtrl.valid && passwordCtrl.touched">Should be 6 characters or more!</ion-label>
+                        </ion-item>
+
+                    </ion-list>
+                </ion-col>
+            </ion-row>
+
+            <ion-row>
+                <ion-col
+                    size-sm="6"
+                    offset-sm="3"
+                >
+
+                    <ion-button
+                        type="button"
+                        color="primary"
+                        expand="block"
+                        fill="clear"
+                        (click)="onSwitchAuthMode(f)"
+                    >
+                        Switch to {{ isLogin ? 'Signup' : 'Login'}}
+                    </ion-button>
+
+                    <ion-button
+                        type="submit"
+                        color="primary"
+                        expand="block"
+                        (click)="onLogin()"
+                        [disabled]="!f.valid"
+                    >
+                        Login
+                    </ion-button>
+
+                </ion-col>
+            </ion-row>
+
+        </ion-grid>
+    </form>
+    <!-- <div text-center>
+        <ion-spinner
+            color="primary"
+            *ngIf="isLoading"
+        ></ion-spinner>
+    </div> -->
 
 </ion-content>
