Angular Material table added

--- a/src/app/atms/notes/edit-note/edit-note.page.html
+++ b/src/app/atms/notes/edit-note/edit-note.page.html
@@ -161,6 +161,7 @@
                             Lesson Note
                         </ion-label>
                         <ion-textarea
+                            class="ion-padding"
                             formControlName="note"
                             rows="10"
                             autocomplete
