--- a/src/app/atms/notes/new-note/new-note.page.html
+++ b/src/app/atms/notes/new-note/new-note.page.html
@@ -157,6 +157,7 @@
                             rows="10"
                             autocomplete
                             autocorrect
+                            auto-grow
                         ></ion-textarea>
                     </ion-item>
                 </ion-col>
