--- a/src/app/atms/collections/collections.page.html
+++ b/src/app/atms/collections/collections.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button menu="m1"></ion-menu-button>
         </ion-buttons>
-        <ion-title text-center>ATM Collections</ion-title>
+        <ion-title class="ion-text-center">ATM Collections</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -21,7 +21,7 @@
         <ion-segment-button value="filtered">Collections with Notes</ion-segment-button>
     </ion-segment>
 
-    <ion-grid *ngIf="!relevantCollections || relevantCollections.length <=0 ">
+    <!-- <ion-grid *ngIf="!relevantCollections || relevantCollections.length <=0 ">
         <ion-row>
             <ion-col
                 size="12"
@@ -31,8 +31,21 @@
                 <p>There are no collections with Notes yet</p>
             </ion-col>
         </ion-row>
-    </ion-grid>
-    <ion-grid *ngIf="relevantCollections.length>0">
+    </ion-grid> -->
+    <div
+        *ngIf="isLoading"
+        class="ion-text-center"
+    >
+        <ion-spinner>Loading...</ion-spinner>
+
+    </div>
+    <!-- <p
+        class="ion-text-center"
+        *ngIf="!isLoading && loadedCollections"
+    >
+        No Collections found.
+    </p> -->
+    <ion-grid *ngIf="!isLoading && relevantCollections">
         <ion-row>
             <ion-col
                 size="12"
@@ -41,7 +54,7 @@
             >
                 <ion-card
                     ion-padding
-                    text-center
+                    class="ion-text-center"
                 >
                     <ion-card-header>
                         <ion-card-title>{{relevantCollections[0].title}}</ion-card-title>
@@ -54,7 +67,7 @@
                     </ion-item>
                     <ion-card-content
                         color="dark"
-                        text-left
+                        class="ion-text-left"
                     >
                         <ion-item>
                             <ion-label color="primary">{{relevantCollections[0].description}}</ion-label>
@@ -70,7 +83,7 @@
                                 'atms', 
                                 'tabs',
                                 'collections',
-                                relevantCollections[0].id
+                                relevantCollections[0].collectionId
                             ]"
                         >
                             Show Collection
@@ -88,13 +101,13 @@
             >
                 <ion-list>
                     <ion-item
-                        *ngFor="let collection of relevantCollections"
+                        *ngFor="let collection of listedCollections"
                         [routerLink]="[
                                 '/',
                                 'atms', 
                                 'tabs',
                                 'collections',
-                                collection.id
+                                collection.collectionId
                             ]"
                         detail
                     >
