--- a/src/app/atms/notes/edit-note/edit-note.page.html
+++ b/src/app/atms/notes/edit-note/edit-note.page.html
@@ -24,7 +24,7 @@
         *ngIf="isLoading"
         class="ion-text-center"
     >
-        <ion-spinner>Loading...</ion-spinner>
+        <ion-spinner></ion-spinner>
     </div>
     <form
         [formGroup]="form"
@@ -53,7 +53,6 @@
                 >
                     <ion-item>
                         <ion-input
-                            value="001"
                             readonly
                             formControlName="lessonId"
                             max="10"
@@ -133,16 +132,17 @@
                             color="primary"
                             position="floating"
                         >
-                            Rating
+                            Position
                         </ion-label>
                         <ion-select
-                            formControlName="rating"
+                            formControlName="position"
                             interface="popover"
                         >
-                            <ion-select-option value="1">Good</ion-select-option>
-                            <ion-select-option value="2">Excellent</ion-select-option>
-                            <ion-select-option value="3">Pussle</ion-select-option>
-                            <ion-select-option value="4">Impossible</ion-select-option>
+                            <ion-select-option value="1">Back</ion-select-option>
+                            <ion-select-option value="2">Front</ion-select-option>
+                            <ion-select-option value="3">Side-strait</ion-select-option>
+                            <ion-select-option value="4">Side-chair</ion-select-option>
+                            <ion-select-option value="5">Side-kneel</ion-select-option>
                         </ion-select>
                     </ion-item>
                 </ion-col>
