--- a/src/app/atms/collections/collection/collection.page.html
+++ b/src/app/atms/collections/collection/collection.page.html
@@ -3,9 +3,6 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="/atms/tabs/collections"></ion-back-button>
         </ion-buttons>
-        <!-- <ion-buttons slot="end">
-            <ion-menu-button menu="m1"></ion-menu-button>
-        </ion-buttons> -->
 
         <ion-title *ngIf="!isLoading && collection">{{collection.title}}</ion-title>
     </ion-toolbar>
@@ -28,12 +25,13 @@
         class="ion-no-padding"
         *ngIf="!isLoading && lessons && lessons.length>0"
     >
-        <ion-row>
+        <!-- <ion-row>
             <ion-col
                 size="12"
                 size-sm="8"
                 offset-sm="2"
             >
+
                 <mat-form-field>
                     <input
                         matInput
@@ -41,10 +39,21 @@
                         placeholder="Filter"
                     >
                 </mat-form-field>
-
             </ion-col>
-        </ion-row>
+        </ion-row> -->
         <ion-row>
+            <ion-col
+                size="12"
+                size-sm="8"
+                offset-sm="2"
+            >
+
+                <ion-searchbar
+                    animated
+                    (keyup)="applyFilter($event.target.value)"
+                >
+                </ion-searchbar>
+            </ion-col>
             <ion-col
                 size="12"
                 size-sm="8"
