--- a/src/app/atms/notes/edit-note/edit-note.page.html
+++ b/src/app/atms/notes/edit-note/edit-note.page.html
@@ -33,42 +33,41 @@
         <ion-grid>
             <ion-row>
                 <ion-col
-                    size-sm="6"
-                    offset-sm="3"
+                    size-sm="4"
+                    offset-sm="2"
                 >
                     <ion-item>
                         <ion-input
                             readonly
                             formControlName="collectionId"
                             color="primary"
+                            class="ion-padding"
                         ></ion-input>
                     </ion-item>
                 </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col
-                    class="ion-no-padding"
-                    size-sm="1"
-                    offset-sm="3"
-                >
+                <ion-col size-sm="4">
                     <ion-item>
                         <ion-input
                             readonly
                             formControlName="lessonId"
                             max="10"
                             color="primary"
+                            class="ion-padding"
                         ></ion-input>
                     </ion-item>
                 </ion-col>
+            </ion-row>
+            <ion-row>
+
                 <ion-col
-                    size-sm="5"
-                    class="ion-no-padding"
+                    size-sm="6"
+                    offset-sm="2"
                 >
                     <ion-item>
                         <ion-input
+                            color="primary"
                             readonly
                             formControlName="lessonTitle"
-                            color="primary"
                         ></ion-input>
                     </ion-item>
                 </ion-col>
