--- a/src/app/atms/notes/notes.page.html
+++ b/src/app/atms/notes/notes.page.html
@@ -1,13 +1,17 @@
 <ion-header>
     <ion-toolbar>
-        <!-- <ion-buttons slot="start">
-            <ion-back-button defaultHref="/atms/tabs/collections"></ion-back-button>
-        </ion-buttons> -->
         <ion-buttons slot="start">
             <ion-menu-button menu="m1"></ion-menu-button>
         </ion-buttons>
-        <ion-title>My ATMs Notes</ion-title>
+        <ion-title>ATM Notes</ion-title>
         <ion-buttons slot="primary">
+            <ion-button (click)="onSave()">
+                <ion-icon
+                    name="save"
+                    slot="icon-only"
+                ></ion-icon>
+
+            </ion-button>
             <ion-button routerLink="/atms/tabs/collections">
                 <ion-icon
                     name="add"
@@ -66,13 +70,20 @@
                 size-sm="8"
                 offset-sm="2"
             >
-                <mat-form-field>
+                <ion-searchbar
+                    animated
+                    placeholder="Search"
+                    (keyup)="applyFilter($event.target.value)"
+                >
+                </ion-searchbar>
+
+                <!-- <mat-form-field>
                     <input
                         matInput
                         (keyup)="applyFilter($event.target.value)"
                         placeholder="Filter"
                     >
-                </mat-form-field>
+                </mat-form-field> -->
 
             </ion-col>
         </ion-row>
@@ -173,30 +184,5 @@
         [pageSizeOptions]="[3, 5, 10]"
         showFirstLastButtons
     ></mat-paginator>
-</ion-content>
 
-<!-- <ion-list *ngIf="!isLoading && (loadedNotes && loadedNotes.length > 0)">
-        <ion-item-sliding
-            side="end"
-            *ngFor="let note of loadedNotes"
-            #slidingItem
-        >
-            <ion-item [routerLink]="['/','atms','tabs','notes','edit', note.noteId]">
-                <ion-label>
-                    {{note.collectionId}} | {{note.lessonId}} | {{note.lessonTitle}}
-                </ion-label>
-            </ion-item>
-            <ion-item-options>
-                <ion-item-option
-                    color="danger"
-                    (click)="onDelete(note.noteId, slidingItem)"
-                >
-                    <ion-icon
-                        name="trash"
-                        slot="top"
-                    ></ion-icon>
-                    Delete
-                </ion-item-option>
-            </ion-item-options>
-        </ion-item-sliding>
-    </ion-list> -->
+</ion-content>
