Title tag added plus cosmetic changes

--- a/src/app/atms/notes/new-note/new-note.page.html
+++ b/src/app/atms/notes/new-note/new-note.page.html
@@ -125,9 +125,16 @@
                         >
                             <ion-select-option value="1">Back</ion-select-option>
                             <ion-select-option value="2">Front</ion-select-option>
-                            <ion-select-option value="3">Side-strait</ion-select-option>
-                            <ion-select-option value="4">Side-chair</ion-select-option>
-                            <ion-select-option value="5">Side-kneel</ion-select-option>
+                            <ion-select-option value="3">Side</ion-select-option>
+                            <ion-select-option value="4">Side-inline</ion-select-option>
+                            <ion-select-option value="5">Side-chair</ion-select-option>
+                            <ion-select-option value="6">Kneeling</ion-select-option>
+                            <ion-select-option value="7">All-fours</ion-select-option>
+                            <ion-select-option value="8">Standing</ion-select-option>
+                            <ion-select-option value="9">Sitting-chair</ion-select-option>
+                            <ion-select-option value="10">Sitting-floor</ion-select-option>
+                            <ion-select-option value="11">Saddle-sitting</ion-select-option>
+
                         </ion-select>
                     </ion-item>
                 </ion-col>
